# hackathon-backend

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  _enums.py  _exceptions.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  base.py
app/assets/: example.json
app/core/: __init__.py  config.py
app/models/: models.py
app/utils/: decorators.py
make/: dev.mk  docker.mk  help.mk  variables.mk
tests/: test_app_startup.py  test_base.py  test_decorators.py  test_exceptions.py  test_init.py
